--- a/index.html
+++ b/index.html
@@ -189,29 +189,18 @@
 
 
       <ul>
-        <li>Harassment includes sexual language and imagery, deliberate
-        intimidation, name-calling, stalking, unwelcome attention, libel and
-        any malicious hacking or social engineering. freeCodeCamp should be a
-        harassment-free experience for everyone, regardless of gender, gender
-        identity and expression, age, sexual orientation, disability, physical
-        appearance, body size, race, national origin, or religion (or lack
-        thereof).</li>
+        <li><bold>Harassment</bold> includes sexual language and imagery, deliberate intimidation, stalking, name-calling, unwelcome attention, libel, and any malicious hacking or social engineering. freeCodeCamp should be a harassment-free experience for everyone, regardless of gender, gender identity and expression, age, sexual orientation, disability, physical appearance, body size, race, national origin, or religion (or lack thereof).</li>
 
 
-        <li>Trolling includes posting inflammatory comments to provoke an
-        emotional response or disrupt discussions.</li>
+        <li><bold>Trolling</bold> includes posting inflammatory comments to provoke an emotional response or disrupt discussions.</li>
 
 
-        <li>Spamming includes posting off-topic messages to disrupt
-        discussions, promote a product, referals to 3rd party sites to gain
-        social standing, advertising job/internship/freelance positions,
-        solicit donations, or flood discussions with consecutive large
-        pictures, videos, streams, and text.</li>
+        <li><bold>Spamming</bold> includes posting off-topic messages to disrupt discussions, promoting a product, soliciting donations, advertising a job / internship / gig, or flooding discussions with files or text.</li>
       </ul>
 
 
       <p>If you see someone harass, troll, or spam anywhere on freeCodeCamp's
-      online media (Gitter, YouTube, Facebook, etc.), notify us in our
+      online media (Forum, Gitter, YouTube, Facebook, etc.), notify us in our
       &thinsp;<a href="https://gitter.im/freecodecamp/admin" target=
       "_blank">admin chat room</a> &thinsp;- preferably with a screen shot of
       the offense. Our team will take any action we deem appropriate, up to and
@@ -220,24 +209,12 @@
 
       <p>Also, no bots are allowed in our chat rooms or on our forum without
       prior written permission from &thinsp;<a href=
-      "https://gitter.im/FreeCodeCamp/CoreTeam" target="_blank">freeCodeCamp's
-      Core Team.</a></p>
+      "https://gitter.im/berkeleytrue" target="_blank">Berkeley Martinez</a>.</p>
 
       <hr>
 
-      <p>If you have questions about this code of conduct, email us at &thinsp;
-      <a href=
-      "/cdn-cgi/l/email-protection#9ce8f9fdf1dcfaeef9f9fff3f8f9fffdf1ecb2fff3f1">
-      <span class="__cf_email__" data-cfemail=
-      "136776727e5375617676707c777670727e633d707c7e">[email
-      &#160;protected]</span>
-      <script data-cfhash='f9e31' type="text/javascript">
-          /* <![CDATA[ */!function(t,e,r,n,c,a,p){try{t=document.currentScript||function(){for(t=document.getElementsByTagName('script'),e=t.length;e--;)if(t[e].getAttribute('data-cfhash'))return t[e]}();if(t&&(c=t.previousSibling)){p=t.parentNode;if(a=c.getAttribute('data-cfemail')){for(e='',r='0x'+a.substr(0,2)|0,n=2;a.length-n;n+=2)e+='%'+('0'+('0x'+a.substr(n,2)^r).toString(16)).slice(-2);p.replaceChild(document.createTextNode(decodeURIComponent(e)),c)}p.removeChild(t)}}catch(u){}}()/* ]]> */
-      </script></a> .</p>
+      <p>If you have questions about this code of conduct, email us at <a href="mailto:team@freecodecamp.com">team@freecodecamp.com</a>.</p>
     </div>
   </div>
-  <!-- scripts should be moved here-->
-  <script src="https://cdn.optimizely.com/js/999692993.js">
-  </script>
 </body>
 </html>
