remove unmonitored team email address

--- a/index.html
+++ b/index.html
@@ -208,12 +208,9 @@
 
 
       <p>Also, no bots are allowed in our chat rooms or on our forum without
-      prior written permission from &thinsp;<a href=
-      "https://gitter.im/berkeleytrue" target="_blank">Berkeley Martinez</a>.</p>
+      prior written permission from&thinsp;<a href=
+      "https://gitter.im/quincylarson" target="_blank">Quincy Larson</a>.</p>
 
-      <hr>
-
-      <p>If you have questions about this code of conduct, email us at <a href="mailto:team@freecodecamp.com">team@freecodecamp.com</a>.</p>
     </div>
   </div>
 </body>
