--- a/index.html
+++ b/index.html
@@ -199,15 +199,15 @@
       </ul>
 
 
-      <p>If you see someone harass, troll, or spam anywhere on freeCodeCamp's
-      online media (Forum, Gitter, YouTube, Facebook, etc.), notify us in our
+      <p>If you see someone harass, troll, or spam anywhere in the freeCodeCamp
+      community (forum, chat, YouTube, Facebook, etc.), notify us in the
       &thinsp;<a href="https://gitter.im/freecodecamp/admin" target=
-      "_blank">admin chat room</a> &thinsp;- preferably with a screen shot of
-      the offense. Our team will take any action we deem appropriate, up to and
+      "_blank">admin chat room</a>&thinsp;- preferably with a screen shot of
+      the offense. The moderator team will take any action we deem appropriate, up to and
       including banning the offender from freeCodeCamp.</p>
 
 
-      <p>Also, no bots are allowed in our chat rooms or on our forum without
+      <p>Also, no bots are allowed in the freeCodeCamp community without
       prior written permission from&thinsp;<a href=
       "https://gitter.im/quincylarson" target="_blank">Quincy Larson</a>.</p>
 
