--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta content="X5tHeKjV-jMLyp4VMoUhW9PAYaOjtPslV250" name="csrf-token">
 
   <title>Code of Conduct | freeCodeCamp</title>
-  <link href="https://www.freecodecamp.org" rel="canonical">
+  <link href="https://code-of-conduct.freecodecamp.org/" rel="canonical">
   <meta charset="utf-8">
   <meta content="IE=edge" http-equiv="X-UA-Compatible">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
@@ -20,7 +20,7 @@
   <meta content="freeCodeCamp" property="og:site_name">
   <meta content="on" name="twitter:widgets:csp">
   <meta content="d0bc047a482c03c24f1168004c2a216a" name="p:domain_verify">
-  <meta content="https://www.freecodecamp.org" property="og:url">
+  <meta content="https://code-of-conduct.freecodecamp.org/" property="og:url">
   <meta content=
   "Learn to code and build projects for nonprofits. Build your full stack web development portfolio today."
   property="og:description">
@@ -37,7 +37,7 @@
   "Learn to code and build projects for nonprofits. Build your full stack web development portfolio today."
   name="description">
   <meta content="@freecodecamp" name="twitter:creator">
-  <meta content="https://www.freecodecamp.org" name="twitter:url">
+  <meta content="https://code-of-conduct.freecodecamp.org/" name="twitter:url">
   <meta content="@freecodecamp" name="twitter:site">
   <meta content="summary_large_image" name="twitter:card">
   <meta content=
