fix metadata to be specific to code of conduct

--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
   <meta content=
   "learn to code, learn to program, learn programming, learn javascript, learn coding, code, coding, programming, software engineer, software developer, mean stack, web development, development, engineering, learn node.js, learn angular.js, learn express.js, learn mongoDB, coding bootcamp, javascript, open source"
   name="keywords">
-  <meta content="Learn to code and help nonprofits" property="og:title">
+  <meta content="The freeCodeCamp Code of Conduct" property="og:title">
   <meta content="freeCodeCamp" property="og:site_name">
   <meta content="on" name="twitter:widgets:csp">
   <meta content="d0bc047a482c03c24f1168004c2a216a" name="p:domain_verify">
   <meta content="https://code-of-conduct.freecodecamp.org/" property="og:url">
   <meta content=
-  "Learn to code and build projects for nonprofits. Build your full stack web development portfolio today."
+  "Learn it. Know it. Live it. With your powers combined, we can keep this community a chill place."
   property="og:description">
   <meta content=
   "https://s3.amazonaws.com/freecodecamp/code-of-conduct.jpg" property=
@@ -34,7 +34,7 @@
   <link href="https://plus.google.com/+Freecodecamp" rel="publisher">
   <link href="https://plus.google.com/+Freecodecamp" rel="author">
   <meta content=
-  "Learn to code and build projects for nonprofits. Build your full stack web development portfolio today."
+  "Learn it. Know it. Live it. With your powers combined, we can keep this community a chill place."
   name="description">
   <meta content="@freecodecamp" name="twitter:creator">
   <meta content="https://code-of-conduct.freecodecamp.org/" name="twitter:url">
@@ -43,9 +43,9 @@
   <meta content=
   "https://s3.amazonaws.com/freecodecamp/code-of-conduct.jpg" name=
   "twitter:image:src">
-  <meta content="Learn to code and help nonprofits" name="twitter:title">
+  <meta content="The freeCodeCamp Code of Conduct" name="twitter:title">
   <meta content=
-  "We're an open source community of busy people who learn to code and build projects for nonprofits. Build your full stack web development portfolio today."
+  "Learn it. Know it. Live it. With your powers combined, we can keep this community a chill place."
   name="twitter:description">
   <meta content="a40ee5d5dba3bb091ad783ebd2b1383f" name="p:domain_verify">
   <meta content="#FFFFFF" name="msapplication-TileColor">
